# routes/web.php
@@ -4,5 +4,5 @@ use Illuminate\Support\Facades\Route;
 
 
 Route::get('/', function () {
-    return view('welcome');
+    return 'Bienvenido al Backend de Registro de Comprobantes';
 });
